# RelativisticQuantumMechanics

./: index.html
KGsolver/: .gitignore  README.md  pyproject.toml
KGsolver/notebooks/: examples.ipynb
KGsolver/src/KGsolver/: __init__.py  cli.py  io.py  plotting.py  potentials.py  riccati.py  spectrum.py
KGsolver/src/KGsolver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
Notebooks/: FInal-Project.nb  RQF.nb  Square_Depth_Potential.md  Square_Well_Potential.md  Square_Well_Potential.nb  WORKSHOP II - RQM.nb  WORKSHOP-5b.nb  WORKSHOP2.nb  WORKSHOP3-a.nb  WORKSHOP3-b.nb  WORKSHOP4-step_potential.nb  WORKSHOP4.nb  Workshop5-a.nb  Workshop6.nb  Workshop6final.nb  Workshop7.nb  alexander.ipynb  exponential-tanh-potential.ipynb  exponential_tanh_barrier.ipynb  final-project.ipynb  good_test.txt  interactive_riccati.html  riccati-log-v1.ipynb  tanh.nb  tanh_potential_barrier.ipynb  test-1.nb  test-2.nb  testW6.nb  woodsBarrie.ipynb
Notebooks/.ipynb_checkpoints/: riccati-log-v0-checkpoint.ipynb  riccati-log-v1-checkpoint.ipynb
